tests/negative/neg_pr118i_enum_integer_mix.safe
package neg_pr118i_enum_integer_mix

   type color is (red, green, blue)

   same : boolean = red == 1
